@@ -2,7 +2,7 @@
 那些金钱从何而来？
 
 #table_declare_text
-*点击任何下面的单元格的探索，将鼠标悬停在任何单元格进行解释。
+*点击任何下面的单元格的探索，将鼠标悬停在任何单元格进行解释。单击列标题进行相应的分类。
 
 #money_title_icon_alt_text
 公众想知道那里的钱是！
@@ -230,7 +230,7 @@ IATI预算（美元）
 捐助者
 
 #table_donor_subtitle_donor_text
-单击该行进行排序
+名称
 
 #table_donor_tip_title_transaction_text
 IATI交易
