@@ -2,7 +2,7 @@
 Where does the money come from?
 
 #table_declare_text
-*Click on any of the cells below to explore. Hover over any cells for explanations.
+*Click on any of the cells below to explore. Hover over any cells for explanations. Click on the column titles to sort accordingly.
 
 #money_title_icon_alt_text
 The public wants to know where the money is!
@@ -230,7 +230,7 @@ IATI BUDGET (USD)
 DONOR
 
 #table_donor_subtitle_donor_text
-Click this row to sort
+NAME
 
 #table_donor_tip_title_transaction_text
 IATI transactions
