@@ -2,7 +2,7 @@
 D'où vient l'argent?
 
 #table_declare_text
-*Cliquez sur l'une des cellules ci-dessous pour explorer. Placez le curseur sur les cellules pour des explications.
+*Cliquez sur l'une des cellules ci-dessous pour explorer. Placez le curseur sur les cellules pour des explications. Cliquez sur les titres des colonnes pour trier en conséquence.
 
 #money_title_icon_alt_text 
 Le public veut savoir où est l'argent!
@@ -230,7 +230,7 @@ BUDGET de IATI (USD)
 DONATEURS
 
 #table_donor_subtitle_donor_text
-Cliquez sur cette ligne pour trier
+NOM
 
 #table_donor_tip_title_transaction_text
 Transactions de IATI
