@@ -2,7 +2,7 @@
 पैसा कहां से आया है?
 
 #table_declare_text
-* पता लगाने के लिए नीचे दिए गए कक्षों में से किसी पर क्लिक करें.स्पष्टीकरण के लिए किसी भी कोशिकाओं पर घुमाएं.
+* पता लगाने के लिए नीचे दिए गए कक्षों में से किसी पर क्लिक करें.स्पष्टीकरण के लिए किसी भी कोशिकाओं पर घुमाएं. तदनुसार सॉर्ट करने के लिए स्तंभ शीर्षक पर क्लिक करें.
 
 #money_title_icon_alt_text
 जनता के पैसे कहाँ है पता करना चाहता है!
@@ -230,7 +230,7 @@ IATI बजट (USD)
 दाता
 
 #table_donor_subtitle_donor_text
-सॉर्ट करने के लिए इस पंक्ति पर क्लिक करें
+नाम
 
 #table_donor_tip_title_transaction_text
 IATI लेनदेन
