@@ -2,7 +2,7 @@
 お金はどこから来るのでしょうか？
 
 #table_declare_text
-*探求するために、次のセルのいずれかをクリックして。説明のための任意のセル上にマウスを移動。
+*探求するために、次のセルのいずれかをクリックして。説明のための任意のセル上にマウスを移動。それに応じて並べ替えるには、列のタイトルをクリックします。
 
 #money_title_icon_alt_text
 国民はお金がどこにあるか知って欲しい！
@@ -230,7 +230,7 @@ IATIバジェット (USD)
 供血
 
 #table_donor_subtitle_donor_text
-ソートするこの行をクリック
+名称
 
 #table_donor_tip_title_transaction_text
 IATI取引
