@@ -2,7 +2,7 @@
 ¿De dónde viene el dinero?
 
 #table_declare_text
-*Haga clic en cualquiera de las celdas de abajo para explorar. Pase el ratón sobre cualquier célula de explicaciones.
+*Haga clic en cualquiera de las celdas de abajo para explorar. Pase el ratón sobre cualquier célula de explicaciones. Haga clic en los títulos de las columnas para ordenar en consecuencia.
 
 #money_title_icon_alt_text
 El público quiere saber dónde está el dinero !
@@ -230,7 +230,7 @@ PRESUPUESTO IATI (USD)
 DONANTE
 
 #table_donor_subtitle_donor_text
-Haga clic en esta fila para ordenar
+NOMBRE
 
 #table_donor_tip_title_transaction_text
 Transacciones IATI
