@@ -1,3 +1,10 @@
+Development Portal (2014-07-25 shi)
+==============================
+Fixed table padding for more figures
+Changed Donor subheader
+Added instruction to table
+
+
 Development Portal (2014-07-24 shi)
 ==============================
 Fixed padding sizes for tables
